feat: add complete authentication example with Axiom framework
- Implement user registration and login with password hashing using BCrypt
- Introduce JWT token generation and validation for secure authentication
- Create protected routes with middleware for user profile management
- Set up database persistence using H2/PostgreSQL
- Include input validation for registration and login requests
- Establish configuration management with type-safe settings
- Enable hot reload for development convenience
- Add logging configuration for better observability